Affichage des items et ajout de la pagination (on enlève currentPage du store)

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,74 @@ header {
   color: #ffffff;
   background-color: #55b9c6;
 }
+
+button {
+  outline: none;
+}
+
+.paginationMenu {
+  display: flex;
+  height: 50px;
+}
+
+.paginationButton {
+  display: inline-block;
+  background-color: #55b9c6;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  height: auto;
+  width: auto;
+  transition: all 0.5s;
+  cursor: pointer;
+  padding: 10px;
+  width: 100px;
+}
+
+.paginationButton span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.rightButton span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -10px;
+  transition: 0.5s;
+}
+
+.rightButton:hover span {
+  padding-right: 15px;
+}
+
+.leftButton span:after {
+  content: "\00ab";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: -10px;
+  transition: 0.5s;
+}
+
+.leftButton:hover span {
+  padding-left: 15px;
+}
+
+.paginationButton:hover span:after {
+  opacity: 1;
+}
+
+.paginationButton:active {
+  opacity: 0.5;
+}
+
+.inputCurrentPage {
+  width: 100px;
+  text-align: center;
+  padding: 0;
+}
