--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   font-family: "Nunito", sans-serif;
+  background-color: whitesmoke;
+  min-height: 100vh;
 }
 
 header {
@@ -8,5 +10,13 @@ header {
   align-items: center;
   height: 30vh;
   color: #ffffff;
-  background-color: #55b9c6;
+  background-image: url("./assets/backgroun_image.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+header h1 {
+  text-transform: uppercase;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
