--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,21 @@
   min-height: 100vh;
 }
 
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 30vh;
-  color: #ffffff;
-  background-image: url("./assets/backgroun_image.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
+@media (min-width: 410px) {
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30vh;
+    color: #ffffff;
+    background-image: url("./assets/backgroun_image.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 
-header h1 {
-  text-transform: uppercase;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  header h1 {
+    text-transform: uppercase;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
 }
