--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -28,7 +28,7 @@
   .bar {
     width: 90%;
     height: 2px;
-    background-color: #f3f3f3;
+    background-color: #56bbc61e;
     margin: 50px auto;
   }
 }
