--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,70 +1,76 @@
-button {
-  outline: none;
-}
+@media (min-width: 410px) {
+  button {
+    outline: none;
+  }
 
-.paginationMenu {
-  display: flex;
-  height: 50px;
-}
+  .paginationMenu {
+    display: flex;
+    height: 50px;
+    margin: auto;
+    width: 50%;
+    justify-content: center;
+  }
 
-.paginationButton {
-  display: inline-block;
-  background-color: #55b9c6;
-  border: none;
-  color: #ffffff;
-  text-align: center;
-  font-size: 20px;
-  height: auto;
-  width: auto;
-  transition: all 0.5s;
-  cursor: pointer;
-  padding: 10px;
-  width: 100px;
-}
+  .paginationButton {
+    display: inline-block;
+    background-color: #55b9c6;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    font-size: 20px;
+    height: auto;
+    width: auto;
+    transition: all 0.5s;
+    cursor: pointer;
+    padding: 10px;
+    min-width: 100px;
+  }
 
-.paginationButton span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
+  .paginationButton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+    font-size: 0.7em;
+  }
 
-.rightButton span:after {
-  content: "\00bb";
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -10px;
-  transition: 0.5s;
-}
+  .rightButton span:after {
+    content: "\00bb";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -10px;
+    transition: 0.5s;
+  }
 
-.rightButton:hover span {
-  padding-right: 15px;
-}
+  .rightButton:hover span {
+    padding-right: 15px;
+  }
 
-.leftButton span:after {
-  content: "\00ab";
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  left: -10px;
-  transition: 0.5s;
-}
+  .leftButton span:after {
+    content: "\00ab";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: -10px;
+    transition: 0.5s;
+  }
 
-.leftButton:hover span {
-  padding-left: 15px;
-}
+  .leftButton:hover span {
+    padding-left: 15px;
+  }
 
-.paginationButton:hover span:after {
-  opacity: 1;
-}
+  .paginationButton:hover span:after {
+    opacity: 1;
+  }
 
-.paginationButton:active {
-  opacity: 0.5;
-}
+  .paginationButton:active {
+    opacity: 0.5;
+  }
 
-.inputCurrentPage {
-  width: 100px;
-  text-align: center;
-  padding: 0;
+  .inputCurrentPage {
+    width: 100px;
+    text-align: center;
+    padding: 0;
+  }
 }
