--- a/src/App.css
+++ b/src/App.css
@@ -21,4 +21,48 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   }
+
+  .cartButton {
+    z-index: 10;
+    top: 50px;
+    right: 20px;
+    position: fixed;
+    width: 70px;
+    height: 70px;
+    padding: 10px;
+    border: none;
+    background-color: black;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50px;
+    cursor: pointer;
+  }
+
+  .cartButtonBgClose {
+    background-image: url("./assets/icon_basket.svg");
+  }
+  .cartButtonBgOpen {
+    background-color: rgba(0, 0, 0, 0);
+    background-size: contain;
+
+    background-image: url("./assets/icon_remove.svg");
+  }
+
+  #nbProductInCart {
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    z-index: 15;
+    height: 25px;
+    width: 25px;
+    background-color: red;
+    position: fixed;
+    top: 100px;
+    right: 20px;
+    border-radius: 20px;
+  }
+
+  .disable {
+    display: none;
+  }
 }
