--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -9,6 +9,7 @@
     margin: auto;
     width: 50%;
     justify-content: center;
+    padding-bottom: 55px;
   }
 
   .paginationButton {
@@ -72,5 +73,6 @@
     width: 100px;
     text-align: center;
     padding: 0;
+    font-weight: bold;
   }
 }
