--- a/src/components/ListItems/ListItems.css
+++ b/src/components/ListItems/ListItems.css
@@ -20,3 +20,28 @@
     text-align: center;
   }
 }
+
+@media (min-width: 780px) {
+  .listItems {
+    max-width: 80%;
+    margin: auto;
+  }
+  .listItems h3 {
+    font-size: 2em;
+  }
+
+  .allItems {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .allItems p {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 1270px) {
+  .listItems {
+    /* max-width: 1100px; */
+  }
+}
