--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -73,6 +73,20 @@
     width: 100px;
     text-align: center;
     padding: 0;
+    padding-left: 5px;
     font-weight: bold;
+  }
+}
+
+@media (min-width: 780px) {
+  .paginationMenu {
+    margin-top: 25px;
+    height: 60px;
+  }
+
+  .paginationButton {
+    font-size: 28px;
+    width: 100%;
+    max-width: 200px;
   }
 }
